ec2.tf
resource "aws_instance" "web" {
  ami                         = "ami-04b4f1a9cf54c11d0"  # Ubuntu Server 22.04 LTS in us-east-1
  instance_type               = "t2.micro"
  subnet_id                   = aws_subnet.public_subnet.id
  key_name                    = aws_key_pair.tf-key-pair.key_name
  vpc_security_group_ids      = [aws_security_group.ec2_sg.id]
  associate_public_ip_address = true

  tags = {
    Name = "ubuntu-web-instance"
  }

  user_data = <<-EOF
              #!/bin/bash
              sudo apt-get update -y
              sudo apt-get install nginx -y
              sudo systemctl start nginx
              sudo systemctl enable nginx
              echo "<h1>Hello from Terraform - NGINX</h1>" > /var/www/html/index.html
              EOF
}
